--- a/main.tex
+++ b/main.tex
@@ -306,25 +306,25 @@ Finally, when intrinsic plasticity was weakened (Table 1, column "No Intrinsic";
 
 \section*{Discussion}
 
-In the first half of this study, we described a way to reconstruct functional connectivity in the tectum of \textit{Xenopus} tadpoles from high-speed Calcium imaging recordings, and used these reconstructions to describe several novel findings about the topology of tectal network. We show that in development, tectal networks tend to become more openwork, approaching a scale-free statistics. We also show that looming-selective cells tend to occupy a special place in this networks: they tend to be located in the middle of the receptive field for a looming stimuli, and tend to serve as "information sinks", collecting more inputs from the rest of the network, compared to non-selective cells (as accessed via both in-degree statistics, and Katz centrality).
+In the first half of this study, reconstruct functional connectivity in the tectum of \textit{Xenopus} tadpoles from high-speed calcium imaging recordings, and describe novel aspects of tectal network topology. We show that tectal networks become more openwork with development, approaching a scale-free network statistics. We also show that cells selective for looming stimuli occupy special places within the network: they tend to be located in the middle of the receptive field for a looming stimuli, and serve as "information sinks", collecting more inputs from the rest of the network, compared to non-selective cells.
 
-In the second part of this paper, we hypothesized that a developing network governed by spike-time-dependent plasticity, synaptic competition, and stimulated by patterned visual inputs, would 1) spontaneously acquire selectivity for looming stimuli, and 2) develop a non-random network structure. We also hypothesized that these effects would be robust enough to be replicated in biological experiments. The support for this hypothesis is mixed. The model did develop selectivity for looming stimuli (in terms of both average preference, and distributed stimulus encoding), and this improvement in selectivity was resilient to changes in developmental rules. Yet these seemingly robust results were not truly replicated in biological experiments, as we observed no improvement in looming detection over development, and neither average selectivity, stimulus encoding, nor cell specialization differed between younger and older tadpoles. This was particularly surprising in view of a known improvement in collision detection with tadpole age \citep{dong2009}.
+In the second part of this paper, we hypothesized that a developing network governed by spike-time-dependent plasticity, synaptic competition, and stimulated by patterned visual inputs, would 1) spontaneously acquire selectivity for looming stimuli, and 2) develop a non-random network structure. We also hoped that these effects would be robust enough to be replicated in biological experiments. The support for this hypothesis is mixed. The model did develop selectivity for looming stimuli (in terms of both average preference, and stimulus encoding), and this improvement in selectivity was resilient to changes in developmental rules. Yet these results were not truly replicated in biological experiments, as we observed no improvement in looming detection over development, and neither average selectivity, stimulus encoding, nor cell specialization differed between younger and older tadpoles. This was particularly surprising in view of a known improvement with age in collision detection in tadpoles \citep{dong2009}.
 
-The model also developed a non-random network structure, with a scale-free degree distribution, low clustering, and high modularity. Of these predictions, about two thirds were replicated in biological experiments (Table 1, compare columns "Imaging" and "Model / Base"): most notably, changes in network degree distribution, a disappearance of bidirectional connections, and statements related to neuronal ensembles. These matches between the model and the experiments suggest that at the very least, our model captured the nature of networks development under the influence of synaptic competition and spike-time-dependent plasticity (STDP). Synaptic competition promoted connectivity in weakly connected neurons, while "punishing" overconnected cells, which created light-frame, openwork graph structures \citep{fiete2010chains}, while STDP coordinated activity within subnetworks, increasing modularity \citep{stam2010modular,litwin2014assemblies}, similar to how it was previously described for Hebbian plasticity \citep{triplett2018emergence,damicelli2018topomod}. We did not observe changes in the \textit{number} of neuronal ensembles \citep{avitan2017spontaneous,pietri2017emergence}, but we believe that it is only because our experiments were not suited for ensemble detection, as we worked with strong shared inputs that reliably activated almost every neuron in the network. This is very different from a case of spontaneous activity, where different sub-networks get activated randomly, with activity propagating within modules more readily than between them \citep{avitan2017spontaneous}.
+Our model networks also developed non-random structure, with a scale-free degree distribution, low clustering, and high modularity. Of predictions related to network structure, most were replicated in biological experiments (Table 1, compare columns "Imaging" and "Model / Base"): most notably, changes in network degree distribution, a disappearance of bidirectional connections, and statements related to neuronal ensembles. These matches between the model and the experiments suggest that at the very least, our model captured the nature of networks development under the influence of synaptic competition and spike-time-dependent plasticity (STDP). Synaptic competition promoted connectivity in weakly connected neurons, while "punishing" overconnected cells, which created light-frame, openwork graph structures \citep{fiete2010chains}, while STDP coordinated activity within sub-networks, increasing modularity \citep{stam2010modular,litwin2014assemblies}, similar to how it was previously described for classic Hebbian plasticity \citep{triplett2018emergence,damicelli2018topomod}. We did not observe changes in the \textit{number} of neuronal ensembles \citep{avitan2017spontaneous,pietri2017emergence}, but we believe that it is because our experiments were not suited for ensemble detection, as we worked with strong shared inputs that reliably activated almost every neuron in the network. This is very different from a case of spontaneous activity, where different sub-networks get activated randomly, with activity propagating within modules more readily than between them \citep{avitan2017spontaneous}.
 
-At the same time, most model predictions about how network properties were supposed to change in development did not replicate in biological experiments. There are four possible explanations for this discrepancy. First, while neurons in stage 46 and 49 tadpoles have different synaptic and intrinsic properties \citep{ciarleglio2015}, and while retinal inputs to the tectum continue to refine \citep{tao2005refinement, munz2014hebbian}, the patterns of internal tectal connectivity may be relatively settled by stage 46. In our model, most network measures plateaued, or even slowly reversed late in development, which means that even for a qualitative comparison between the model and the experiment we have to make a critical assumption about whether stage 46 of tadpole development corresponds to a mid-point of network maturation, or whether it falls on the developmental plateau. The absence of improvement in stimulus identity prediction from neuronal activity in older tadpoles, compared to younger ones, suggests that both stages may indeed fall on the “plateau”. If true, this would mean that less robust collision avoidance in behaving stage 46 tadpoles \citep{dong2009} is likely to be due to maturation of sensorimotor projections from the tectum to the hindbrain, which we did not assess in this study.
+At the same time, most model predictions about how network properties were supposed to change in development did not replicate in biological experiments. There are four possible explanations for this discrepancy. First, while neurons in stage 46 and 49 tadpoles have different synaptic and intrinsic properties \citep{ciarleglio2015}, and while retinal inputs to the tectum are known to still be refined at these developmental stages \citep{tao2005refinement, munz2014hebbian}, the patterns of internal tectal connectivity may be relatively settled by stage 46. In our model, most network measures plateaued, or even reversed late in development, which means that even for a qualitative comparison between the model and the experiment we have to make a critical assumption about whether developmental stage 46 corresponds to a mid-point of network maturation, or falls on the developmental plateau. The absence of improvement in stimulus identity prediction from neuronal activity in older tadpoles, compared to younger ones, suggests that both stages may indeed fall on the “plateau”. If true, this would mean that differences in collision avoidance between stage 46 and stage 49 tadpoles \citep{dong2009} may be due to maturation of sensorimotor projections from the tectum to the hindbrain, which we did not assess in this study.
 
-Second, a poor fit between model predictions and biological experiments may be a consequence of low statistical power of this study. With 14 and 16 networks for each of two developmental stages, we could only hope to detect changes of Cohen $d \approx$ 1.0, assuming $p_t<$ 0.05 threshold and 80\% power. Moreover, based on available imaging studies, we can estimate that at stage 49 tadpoles, one side of a tectum contains about 10-15 thousand neurons, as it is about 40 cells across \citep{hiramoto2009}, and packed 6-10 cells deep in its thickest part \citep{hewapathirane2008vivo}, while tapering towards the edges \citep{bollmann2009}. On the other hand, here we reconstructed connectivity within the top layer of 128$\pm$40 cells, in a field of about 12 by 12 neurons, which means that our reconstructions covered only about 1\% of a full tectal network. With a coverage so sparse, our parameter estimations were expected to be noisy, further lowering the power of our tests.
+Second, a poor fit between model predictions and biological experiments may be a consequence of low statistical power of this study. With 14 and 16 networks for each of two developmental stages, we could only hope to detect large changes of Cohen $d \approx$ 1.0, assuming $p_t<$ 0.05 threshold and 80\% power. Moreover, based on available imaging studies, we can estimate that at stage 49, one side of a tadpole tectum contains about 10-15 thousand neurons, as it is about 40 cells across \citep{hiramoto2009}, and packed 6-10 cells deep in its thickest part \citep{hewapathirane2008vivo}, while tapering towards the edges \citep{bollmann2009}. On the other hand, here we reconstructed connectivity within the top layer of 128$\pm$40 cells, in a field of about 12 by 12 neurons, which means that our reconstructions covered only about 1\% of a full tectal network, and 0.01\% of all connections. With a coverage so sparse, our parameter estimations are expected to be noisy, further lowering the power of our tests.
 
-Third, one can question the validity of our connectivity reconstructions, as we did not have a technical opportunity to compare these reconstructions to any sort of "ground truth" connectivity. The best way to address this concern would be to run a set of control experiment, analyzing transfer entropy between pairs of cells proven to be either connected or disconnected, to estimate the power of graph reconstruction from Ca imaging recordings. Unfortunately, these experiments are currently beyond our technical ability, so we have to rely on indirect criteria for successful network reconstruction. Two most important observations that support the validity of our results are the fact that the share of reciprocal connections decreased in development; and that we observed a consistent non-randomness of almost all network measurements in reconstructed networks. Also, we were comforted by a good replication of tectal response shapes (compared to \citep{khakhalin2014}), a good internal replication of edge detection between stimuli types (see Methods), and an observation of retinotopy during responses to looming stimuli.
+Third, one can question the validity of our connectivity reconstructions, as we did not have a technical opportunity to compare these reconstructions to a "ground truth" connectivity (although see \citealt{xu2011}). The best way to address this concern is to run a set of control experiment, analyzing transfer entropy between pairs of cells proven to be either connected or disconnected, to estimate the power of graph reconstruction from Ca imaging recordings. Unfortunately, these experiments are currently beyond our technical ability, so we have to rely on indirect criteria for successful network reconstruction. Two most important observations that support the validity of our results are the fact that the share of reciprocal connections decreased in development; and that we observed a consistent non-randomness of almost all network measurements in reconstructed networks, compared to rewired networks. Also, we were comforted by a good replication of tectal response shapes (compared to \citealt{khakhalin2014}), a good internal replication of edge detection between stimuli types (see Methods), and an observation of retinotopy during responses to looming stimuli.
 
-Finally, the fourth way to explain a relatively poor fit between the model and the imaging experiments is to assume that the mechanisms of looming selectivity in the tectum are different from that in the model. In the model, looming selectivity was largerly due to the development of synfire chains \citep{zheng2014synfire,cohen2002synreview} that were guided by structured sensory activation \citep{clopath2010stdpcoding}, and thus encoded a typical activation pattern in response to looming stimuli. Later, when looming stimuli were presented to a model, they "resonated" with matching synfire chains, causing stronger network activation. It maybe that in the biological tectum, enhanced responses to looming stimuli are due to either delayed recurrent activation model \citep{khakhalin2014,jang2016}, or some sort of dynamic inactivation model \citep{fotowat2011multiplexing}. Two most concerning discrepancies between the model and the experiments are  the position of selective cells within the network (central in tadpoles, peripheral in the model), and the difference in centrality measurements related to local signal integration (high in-degree and Katz rank in biological experiments, but no similar effect in the model). At the same time, the difference in selective cell position may be due to some spatial constraints that were present in a biological brain, but were not present in the model, while the difference in Katz centrality may be explained by a combination of two factors: a strict synaptic competition in the model, and incomplete observation of networks in real tecta. Indeed, in the model we forced every neuron to have outputs within the network, which promoted the development of cycles even for highly selective cells, while in the real tectum highly selective cells may lack output intratectal connections. This effect would be further exaggerated by sparse observation of intratectal connections, as highly convergent nodes would remain convergent in a sparsely observed network, while their outputs, even if they exist, would be more likely to get lost.
+Finally, the fourth way to explain a relatively poor fit between the model and the imaging experiments is to assume that the mechanisms of looming selectivity in the tectum are different from that in the model. In the model, looming selectivity was largely mediated by synfire chains \citep{zheng2014synfire,cohen2002synreview} that were guided by structured sensory activation \citep{clopath2010stdpcoding}, and thus encoded a typical activation pattern in response to looming stimuli. Later, when looming stimuli were presented to a model, they "resonated" with matching synfire chains, causing stronger network activation. It may be that in a biological tectum, enhanced responses to looming stimuli are due to either delayed recurrent integration \citep{khakhalin2014,jang2016}, dynamic inactivation \citep{fotowat2011multiplexing}, or some other effects \citep{baginskas2009recurrent}. Two most concerning discrepancies between the model and the experiments are  the position of selective cells within the network (central in tadpoles, peripheral in the model), and the difference in centrality measurements related to local signal integration (high in-degree and Katz rank in biological experiments, but no similar effect in the model). At the same time, the difference in selective cell position may be due to spatial organization of a biological brain that was not captured by the model, while the difference in Katz centrality may be explained by exaggerated synaptic competition in the model. Indeed, in the model we forced every neuron to have outputs \textit{within} the network, which led to the development of cycles, while in the real tectum highly selective cells may lack local intratectal outputs, projecting only to other brain regions. This hypothesis is indirectly supported by high Katz centrality of looming-selective cells in a model without synaptic competition.
 
-Despite an incomplete fit with the data, our model still yielded some interesting general predictions. The sensitivity analysis showed that of all modeling assumptions, the presence of patterned visual stimulation was most important for the development of input selectivity. The model converged to a state suitable for looming detection even if STDP, synaptic competition, or intrinsic plasticity were disrupted, but it failed if sensory inputs were kept random. Moreover, it was not critical for the model to be specifically trained on looming stimuli: it performed almost as well with a mix of oblique looming, receding, and translating stimuli, which means that it is stimulus locality and edge continuity that mattered for the development. This suggests that proper tectal network organization can emerge from responses to retinal waves alone, provided that they have spatial and temporal statistics similar to that of behaviorally relevant visual stimuli \citep{huberman2008waves}. Note that our model predicts disrupted tectal organization in enucleated or dark-reared animals, which matches experimental research in tadpoles \citep{xu2011}, but seems to contradict experiemntal observations from zebrafish \citep{pietri2017emergence}.
+Despite an incomplete match with the data, our model yielded interesting general predictions. The sensitivity analysis showed that of all modeling assumptions, two most important ones were the presence of fast intrinsic plasticity, and exposure to pattern visual stimulation. The model converged to a state suitable for looming detection even if either STDP or synaptic competition were disrupted, but it failed if intrinsic plasticity was kept slow compared to synaptic plasticity, or if sensory inputs were kept random. Moreover, it was not critical for the model to be specifically trained on looming stimuli: it performed almost as well with a mix of oblique looming, receding, and translating stimuli, suggesting that it is stimulus locality and edge continuity that mattered the most. This suggests that proper tectal network organization can emerge from responses to retinal waves alone, provided that they have spatial and temporal statistics similar to that of behaviorally relevant visual stimuli \citep{huberman2008waves}. Our model also predicts disrupted tectal organization in enucleated or dark-reared animals, which matches experimental research in tadpoles \citep{xu2011}, but seems to contradict experimental observations in Zebrafish \citep{pietri2017emergence}.
 
-At the same time, in practice, to arrange a subset of tectal outputs in an actionable looming detector, as we did using multivariate logistics regression, a developing brain would need access to a learning signal. We assume that in aquatic vertebrates, this learning signal may come from both dimming receptors in the retina \citep{baranauskas2012}, and lateral line receptors in the body \citep{truszkowski2017}. These inputs may trigger plasticity tectal outputs to the reticulospinal neurons in the hindbrain, selecting a subset of inputs that are most active immediately before a collision. Moreover, during random encounters with spatial objects, different parts of the retina would be dimmed, and different segments of the lateral line would be activated in each collision, theoretically allowing the animal to build several overlapping subnetworks, selective for collisions of different geometry, and projecting to different subsets of motor neurons \citep{helmbrecht2018topography}. Therefore, this type of learning could lead to the development of spatially nuanced escape responses to optimize avoidance behaviors, as described in both tadpoles \citep{khakhalin2014} and fish \citep{bhattacharyya2017assessment}.
+At the same time, to arrange a subset of tectal outputs to a functional looming detector, as we did while estimating the level of stimulus encoding (Figure 8E), a developing brain would need access to a learning signal. We propose that in aquatic vertebrates this learning signal may come from both dimming receptors in the retina \citep{baranauskas2012}, and lateral line receptors in the body \citep{truszkowski2017}. These inputs would trigger plasticity of tectal outputs to the reticulospinal neurons in the hindbrain, selecting a subset of inputs that are most active immediately before a collision. Moreover, during random encounters with spatial objects, different parts of the retina would be dimmed, and different segments of the lateral line would be activated in each individual collision, theoretically allowing the animal to build several overlapping subnetworks, selective for collisions of different geometry, and projecting to different subsets of motor neurons \citep{helmbrecht2018topography}. Therefore, this type of learning could lead to the development of spatially nuanced escape responses to optimize avoidance behaviors, as described in both tadpoles \citep{khakhalin2014} and fish \citep{bhattacharyya2017assessment}.
 
-To sum up, we show that a combination of simple developmental rules with patterned sensory inputs can quickly shape a random network into a structured retinotopic system, able to support collision detection. Moreover, our results suggest that collision detection in small aquatic animals may partially rely on resonant subnetworks of spatially organized synfire chains that integrate information about stimulus position, speed, and size change, and transform it into an appropriate motor response. We hypothesize that this sensorimotor transformation may develop through a form of reinforcement learning in the hindbrain, and hope to explicitly test this hypothesis in the future, both experimentally, and through computational modeling.
+To sum up, we show that a combination of simple developmental rules with patterned sensory inputs can quickly shape a random network into a structured retinotopic system, able to support collision detection. Our results suggest that collision detection in small aquatic animals may partially rely on resonant subnetworks of spatially organized synfire chains that integrate information about stimulus position, speed, and size change, and transform it into an appropriate motor response. We hypothesize that this sensorimotor transformation may develop through a form of reinforcement learning in the hindbrain, and hope to test this hypothesis in the future.
 
 \section*{Methods}
 
